# flask-cms

./: .coverage  .env  .flaskenv  .gitignore  Dockerfile  README.md  compose.yml  config.py  pyproject.toml  run.sh  testtest.py
app/: __init__.py  email.py  extensions.py  models.py  newsletter.py  package.json  tasks.py  translate.py
app/api/: __init__.py  routes.py
app/cli/: __init__.py  translate.py
app/components/basecoat/: dialog.html.jinja
app/dash/: __init__.py  forms.py  routes.py
app/errors/: handlers.py
app/jobs/: webmention.py
app/main/: __init__.py  forms.py  routes.py
app/static/src/: input.css
app/templates/: _macros.html  admin.html  base.html  blog_admin.html  bootstrap_wtf.html  edit_blog.html  edit_post.html  explore.html  index.html  macros.html  page.html  rss.xml  search.html  view_blog.html  view_page.html  view_post.html  view_user.html
app/templates/dash/: index.html
app/templates/dash/blog/: content.html  index.html  nav.html  settings.html  themes.html
app/templates/email/: export_posts.html  newsletter.html
app/templates/errors/: 404.html  500.html
app/translations/en/LC_MESSAGES/: messages.mo  messages.po
instance/: test.db
migrations/versions/: 3f122ea3a2fe_.py  4ed094da83b7_add_language_to_posts.py  5b255fddab38_add_user_to_post_and_created_at_and_.py  c068eaa844df_.py
tests/: conftest.py  test_cli.py  test_mail.py  test_main.py  test_models.py  test_utils.py
