[project]
name = "flask-cms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch>=8.17.1",
    "flask>=3.1.0",
    "flask-babel>=4.0.0",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.1.0",
    "flask-moment>=1.0.6",
    "flask-security[mfa,common]>=5.6.0",
    "flask-sqlalchemy>=3.1.1",
    "httpx>=0.28.1",
    "markdown>=3.7",
    "rq>=2.1.0",
    "setuptools>=75.8.0",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "types-bleach>=6.2.0.20241123",
    "types-passlib>=1.7.7.20241221",
]

[tool.djlint]
profile = "jinja"